[package]
name = "ghost_chat"
version = "0.2.0"
edition = "2021"

[dependencies]
reed-solomon-erasure = "6.0.0"
ring = "0.17.8"
gf256 = { version = "0.3", features = ["shamir", "thread-rng"] }
tokio = { version = "1.35", features = ["full"] }
rand = "0.8.5"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
pqcrypto-kyber = "0.8.0"
pqcrypto-traits = "0.3.5"
rand_core = { version = "0.6", features = ["getrandom"] }
local_ipaddress = "0.1.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"